Added workaround to avoid showing pre-loaded main page after logout, fixes #174.
The workaround classifies the link to the main page as "external", making a reload necessary. The real solution is to migrate the app to a single-page app.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,8 @@
 <div data-role="navbar">
     <ul>
         <li>
-            <a href="{{page.rot}}/" data-icon="home" {% if page.menu== 1 %}class="ui-btn-active" {%endif%}>
+            <a href="{{page.rot}}/" data-icon="home" data-rel="external" {% if page.menu== 1 %}class="ui-btn-active"
+               {%endif%}>
                 {{page.glob.l10n.home}}
             </a>
         </li>
