Search fields in panels will now get automatic focus (with desktop browsers), fixes #183.
This will only work with desktop browser, not on mobile devices.

--- a/templates/series.html
+++ b/templates/series.html
@@ -42,7 +42,7 @@
         <div data-role="fieldcontain" class="ui-hide-label">
             <label for="search">{{page.glob.l10n.pagination_search_lbl}}</label>
             <input type="search" name="search" id="search" value="{{search}}"
-                   placeholder="{{page.glob.l10n.pagination_search_ph}}"/>
+                   placeholder="{{page.glob.l10n.pagination_search_ph}}" autofocus="true"/>
         </div>
     </form>
 </section>
