--- a/templates/global_search.html
+++ b/templates/global_search.html
@@ -4,6 +4,16 @@
 {% endblock %}
 
 {% block content %}
+<div>
+    <form action="{{page.rot}}/search/"
+          method="get" class="ui-bar-a">
+        <div data-role="fieldcontain" class="ui-hide-label">
+            <label for="search">{{page.glob.l10n.pagination_search_lbl}}</label>
+            <input type="search" name="search" id="search" value="{{search}}"
+                   placeholder="{{page.glob.l10n.pagination_search_ph}}" autofocus="true"/>
+        </div>
+    </form>
+</div>
 <div data-role="collapsible-set">
 	<div data-role="collapsible">
 		<h3>{{page.glob.l10n.titles}}: {{books_total}}</h3>
