Added code for displaying series in author pages, see #255

--- a/style/style.less
+++ b/style/style.less
@@ -94,6 +94,10 @@ div#flash  {
     }    
 }  
 
+/* filler for author detail pages */
+div.filler {
+  margin-bottom: 20px;  
+}
 
 @media (max-width: 768px) {
   .title_detail .title_detail_image {
