--- a/templates/index_last30.html
+++ b/templates/index_last30.html
@@ -19,7 +19,7 @@
 </ul>
 
 <h2>{{page.glob.l10n.dl30}}</h2>
-<div class="grid grid-cols-1 md:grid-cols-4">
+<div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6">
     {% for book in books %}
     {% include "title_entry.html" %}
     {% endfor %}
