--- a/templates/tags.html
+++ b/templates/tags.html
@@ -18,40 +18,12 @@
 {% block pid %}id="ptags"{%endblock%}
 
 {% block content %}
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+<div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6">
 	{% for tag in tags %}
 		{% if tag.initial != "" %}
 			<!-- TODO Add list divider card? -->
 		{% else %}
-			<a href="{{page.rot}}/tags/{{ tag.id }}/0/">
-				<figure class="md:flex bg-gray-100 rounded-xl p-8 md:p-0">
-					{% if this_series.thumbnail %}
-					<img class="w-32 h-32 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto" src="{{page.rot}}/{{tag.thumbnail.url}}" alt="" width="384" height="512">
-					{% else %}
-					<svg class="h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z" />
-					</svg>
-					<!-- TODO tags icon? -->
-					<!--img class="w-32 h-32 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto" src="{{page.rot}}/img/tags.png" alt="" width="384" height="512"-->
-					{% endif %}
-
-					<div class="pt-6 md:p-8 text-center md:text-left space-y-4">
-						<blockquote>
-							<p class="text-lg font-semibold">
-								{{ tag.name }}
-							</p>
-						</blockquote>
-						<figcaption class="font-medium">
-							<div class="text-cyan-600">
-								{{tag.name}}
-							</div>
-							<div class="text-gray-500">
-								{{tag.anzahl}}
-							</div>
-						</figcaption>
-					</div>
-				</figure>
-			</a>
+			{% include "tag_entry.html" %}
 		{% endif %}
   	{% endfor %}
 </div>
