--- a/templates/title_entry.html
+++ b/templates/title_entry.html
@@ -1,26 +1,18 @@
 <a href="{{page.rot}}/titles/{{book.id}}">
-	<figure class="md:flex bg-gray-100 rounded-xl p-8 md:p-0">
+	<div class="card">
 		{% if book.thumbnail%}
-		<img class="w-32 h-32 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto" src="{{page.rot}}/data/titles/thumb_{{ book.id }}.png" alt="" width="384" height="512">
+		<img class="card-image" src="{{page.rot}}/data/titles/thumb_{{ book.id }}.png" alt="" width="384" height="512">
 		{% else %}
-		<img class="w-32 h-32 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto" src="{{page.rot}}/titles/{{ book.id }}/thumbnail" alt="" width="384" height="512">
+		<img class="card-image" src="{{page.rot}}/titles/{{ book.id }}/thumbnail" alt="" width="384" height="512">
 		{% endif %}
-
-		<div class="pt-6 md:p-8 text-center md:text-left space-y-4">
-			<blockquote>
-				<p class="text-lg font-semibold">
+		<div class="card-content">
+				<p class="text-lg font-semibold truncate">
 					{% if series %}{{book.series_index}} - {% endif %}
-					{{ book.sort }} ({{ book.pubdate|date("Y") }})
+					{{ book.sort }}
 				</p>
-			</blockquote>
-			<figcaption class="font-medium">
-				<div class="text-cyan-600">
+			<p class="font-medium text-cyan-600 truncate">
 					{{book.author_sort}}
-				</div>
-				<div class="text-gray-500">
-					{{book.addInfo}}
-				</div>
-			</figcaption>
+			</p>
 		</div>
-	</figure>
+	</div>
 </a>
