--- a/style/tailwind.css
+++ b/style/tailwind.css
@@ -808,6 +808,22 @@ select {
   }
 }
 
+.card {
+  max-width: 20rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  overflow: hidden;
+}
+
+.card-image {
+  display: block;
+  width: 100%;
+}
+
+.card-content {
+  padding: 1rem 1.5rem;
+}
+
 .space-y-0 > :not(template) ~ :not(template) {
   --space-y-reverse: 0;
   margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
