--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -5,15 +5,15 @@
 {% block content %}
 <section class="title_detail">	
 	<header>
-			<h1>{{ book.title }}</h1> 												
+			<h2>{{ book.title }}</h2>
 			<p>					
 				{{ book.pubdate | date("Y") }}	{{ language }}
 			</p>
 			<p class="ui-state-error">{{ flash.error }}</p>	
 	</header>		
-	<div>
-		<h2>{{page.glob.l10n.download}}</h2>
-		{% if protect_dl == true %} 
+	<div class="title_detail_dloptions">
+		<h3>{{page.glob.l10n.download}}</h3>
+		{% if protect_dl == true %}
 		<div class="dl_access">
 			<p>
 				{{ page.glob.l10n.check_access_info }}
@@ -22,16 +22,16 @@
 				{{ page.glob.l10n.check_access }}
 			</a>
 		</div>
-		{% endif %}	
+		{% endif %}
 		<div class ="dl_download" {% if protect_dl == true %} hidden="true" {% endif %}>
-			<p>
+			<p class="text-sm">
 				{{ page.glob.l10n.presskey }}
 			</p>
-			<div class="flex space-x-4">
+			<div class="flex space-x-4 my-4">
 				{% for format in formats %}
 				<div class="flex-initial">
 					<a
-							class="pr-1 bg-black dark:bg-white dark:text-gray-900 text-white"
+							class="p-1 m-1 bg-gray-900 text-white dark:bg-white dark:text-gray-900 border-4 border-double"
 							{% if page.glob.glob_dl_toggle == true %} disabled="true" {% endif %}
 							href="{{page.rot}}/titles/{{book.id}}/file/{{format.name|url_encode()}}.{{format.format|lower}}">
 						{{ format.format }} | {{format.uncompressed_size|hfsize}}
@@ -73,45 +73,57 @@
 			{% endif %}
 		</div>
 		<div class="title_details ">
-			<div id="authors" data-role="collapsible" data-collapsed="false">
-				<h2>{{page.glob.l10n.authors}}</h2>
+			<div id="authors">
+				<h3>{{page.glob.l10n.authors}}</h3>
 				{% for author in authors %}
-				<a data-role="button" data-icon="info" href="{{page.rot}}/authors/{{author.id}}/0/">{{ author.name }}</a>
+				<a class="icon" href="{{page.rot}}/authors/{{author.id}}/0/">
+					<svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+					{{ author.name }}
+				</a>
 				{% endfor %}
 			</div>
 			{% if series != NULL %}
-			<div id="series" data-role="collapsible">
-				<h2>{{page.glob.l10n.series}}</h2>
+			<div id="series">
+				<h3>{{page.glob.l10n.series}}</h3>
 				{% for this_series in series %}
-				<a data-role="button" data-icon="info" href="{{page.rot}}/series/{{this_series.id}}/0/">{{ this_series.name }} ({{book.series_index}})</a>
+				<a class="icon" href="{{page.rot}}/series/{{this_series.id}}/0/">
+					<svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+					{{ this_series.name }} ({{book.series_index}})
+				</a>
 				{% endfor %}
 			</div>
 			{% endif %}
-			<div id="tags" data-role="collapsible">
-				<h2>{{page.glob.l10n.tags}}</h2>
+			<div id="tags">
+				<h3>{{page.glob.l10n.tags}}</h3>
 				<p>
 					{% for tag in tags %}
-					<a data-role="button" data-mini="true" data-inline="true" href="{{page.rot}}/tags/{{tag.id}}/0/">{{ tag.name }}</a>
+					<a class="icon" href="{{page.rot}}/tags/{{tag.id}}/0/">
+						<svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+						{{ tag.name }}
+					</a>
 					{% endfor %}
 				</p>
 			</div>
 			{% if show_idlinks %}
-			<div id="idlinks" data-role="collapsible" data-collapsed="false">
-				<h2>{{page.glob.l10n.idlinks}}</h2>
+			<div id="idlinks">
+				<h3>{{page.glob.l10n.idlinks}}</h3>
 				<p>
 					{% for id in ids %}
 					{% if id_templates[id.type] != NULL %}
-					<a data-role="button" data-icon="cloud" rel="external" href="{{ id_templates[id.type][0]|replace({'%id%': id.val})}}">{{ id_templates[id.type][1] }}</a>
+					<a class="icon" rel="external" href="{{ id_templates[id.type][0]|replace({'%id%': id.val})}}">
+						<svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
+						{{ id_templates[id.type][1] }}
+					</a>
 					{% endif %}
 					{% endfor %}
 				</p>
 			</div>
 			{% endif %}
 			{% if ccs != NULL %}
-			<div id="custom_columns" data-role="collapsible">
-				<h4>{{page.glob.l10n.custom_columns}}</h4>
-				<table id="custom_columns_table">
-					<tbody>
+			<div id="custom_columns">
+				<h3>{{page.glob.l10n.custom_columns}}</h3>
+				<table id="custom_columns_table" class="my-2 table-auto min-w-full divide-y divide-gray-900">
+					<tbody class="divide-y divide-gray-900">
 					{% for cc in ccs %}
 					<tr>
 						<th>
@@ -147,7 +159,7 @@
 			{% endif %}
 			{% if comment %}
 			<div id="comment">
-				<h4>{{page.glob.l10n.comment}}</h4>
+				<h3>{{page.glob.l10n.comment}}</h3>
 				<div>
 					{% autoescape false %}
 					{{ comment }}
