Added author functions

--- a/app/templates/authors.html
+++ b/app/templates/authors.html
@@ -11,7 +11,7 @@
 
 <link rel="related" href="{{page.rot}}/opds/"
   	type="application/atom+xml;profile=opds-catalog" title="OPDS index">
-  <link rel="alternate" href="{{page.rot}}/opds/authorlist/" 
+  <link rel="alternate" href="{{page.rot}}/opds/authors/"
   	type="application/atom+xml;profile=opds-catalog" title="OPDS catalog: by authors">
 {% endblock %}
 
