--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -15,23 +15,23 @@
             </a>
         </li>
         <li>
-            <a href="{{page.rot}}/titleslist/0/" data-icon="bars" {% if page.menu== 2 %}class="ui-btn-active" {%endif%}>
+            <a href="{{page.rot}}/titles/" data-icon="bars" {% if page.menu== 2 %}class="ui-btn-active" {%endif%}>
                 {{page.glob.l10n.titles}}
             </a>
         </li>
         <li>
-            <a href="{{page.rot}}/authorslist/0/" data-icon="user" {% if page.menu== 3 %}class="ui-btn-active"
+            <a href="{{page.rot}}/authors/" data-icon="user" {% if page.menu== 3 %}class="ui-btn-active"
                {%endif%}>
                 {{page.glob.l10n.authors}}
             </a>
         </li>
         <li>
-            <a href="{{page.rot}}/tagslist/0/" data-icon="tag" {% if page.menu== 4 %}class="ui-btn-active" {%endif%}>
+            <a href="{{page.rot}}/tags/" data-icon="tag" {% if page.menu== 4 %}class="ui-btn-active" {%endif%}>
                 {{page.glob.l10n.tags}}
             </a>
         </li>
         <li>
-            <a href="{{page.rot}}/serieslist/0/" data-icon="bullets" {% if page.menu== 5 %}class="ui-btn-active"
+            <a href="{{page.rot}}/series/" data-icon="bullets" {% if page.menu== 5 %}class="ui-btn-active"
                {%endif%}>
                 {{page.glob.l10n.series}}
             </a>
