--- a/app/templates/series.html
+++ b/app/templates/series.html
@@ -11,7 +11,7 @@
 
 <link rel="related" href="{{page.rot}}/opds/"
 	type="application/atom+xml;profile=opds-catalog" title="OPDS index">
-<link rel="alternate" href="{{page.rot}}/opds/serieslist/" 
+<link rel="alternate" href="{{page.rot}}/opds/series/"
 	type="application/atom+xml;profile=opds-catalog" title="OPDS catalog: by series">
 {% endblock %}
 
@@ -24,7 +24,7 @@
 			<li data-role="list-divider"> {{ this_series.initial }}</li>
 		{% else %}
 			<li>
-				<a href="{{page.rot}}/series/{{ this_series.id }}/0/">{{ this_series.name }}
+				<a href="{{page.rot}}/series/{{ this_series.id }}/">{{ this_series.name }}
 				<span class="ui-li-count">{{ this_series.anzahl }}</span></a>
 			</li>
 		{% endif %}
