--- a/app/templates/global_search.html
+++ b/app/templates/global_search.html
@@ -23,7 +23,7 @@
 		  	{% endfor %}
 		  	{% if more_books %}
 		  		<li data-theme="a">
-		  			<a href="{{page.rot}}/titleslist/0/?search={{search}}">{{books_total}} {{page.glob.l10n.titles}} ...</a>
+		  			<a href="{{page.rot}}/titles/?search={{search}}">{{books_total}} {{page.glob.l10n.titles}} ...</a>
 				</li>
 			{% endif %}
 		</ul>
@@ -33,14 +33,14 @@
 		<ul data-role="listview" data-filter="false">	
 			{% for author in authors %}
 				<li>
-				<a href="{{page.rot}}/authors/{{ author.id }}/0/">{{ author.sort }}
+				<a href="{{page.rot}}/authors/{{ author.id }}/">{{ author.sort }}
 					<span class="ui-li-count">{{author.anzahl}}</span>
 				</a>
 			</li>
 		  {% endfor %}
 		  {% if more_authors %}
 		  		<li data-theme="a">
-		  			<a href="{{page.rot}}/authorslist/0/?search={{search}}">{{authors_total}} {{page.glob.l10n.authors}}...</a>
+		  			<a href="{{page.rot}}/authors/?search={{search}}">{{authors_total}} {{page.glob.l10n.authors}}...</a>
 				</li>
 			{% endif %}
 		</ul>
@@ -56,7 +56,7 @@
 		  {% endfor %}
 		  {% if more_tags %}
 		  		<li data-theme="a">
-		  			<a href="{{page.rot}}/tagslist/0/?search={{search}}">{{tags_total}} {{page.glob.l10n.tags}}...</a>
+		  			<a href="{{page.rot}}/tags/?search={{search}}">{{tags_total}} {{page.glob.l10n.tags}}...</a>
 				</li>
 			{% endif %}
 		</ul>
@@ -72,7 +72,7 @@
 		  {% endfor %}
 		  {% if more_series %}
 		  		<li data-theme="a">
-		  			<a href="{{page.rot}}/serieslist/0/?search={{search}}">{{series_total}} {{page.glob.l10n.series}}...</a>
+		  			<a href="{{page.rot}}/series/?search={{search}}">{{series_total}} {{page.glob.l10n.series}}...</a>
 				</li>
 			{% endif %}
 		</ul>
