Suppress output of undefined publishing year in title list, fixes #293

--- a/app/templates/title_entry.html
+++ b/app/templates/title_entry.html
@@ -8,7 +8,9 @@
 		
 		<h3>
 			{% if series %}{{book.series_index}} - {% endif %}
-			{{ book.sort }} ({{ book.pubdate|date("Y") }})
+			{{ book.sort }}
+			{% set pb = book.pubdate|date("Y") %}
+			{%if pb != "0101" %} {{ pb }} {% endif %}}
 		</h3>
 		<p>{{book.author_sort}} {{book.addInfo}}</p>
 	</a>
